--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,3 +6,16 @@ server:
 spring:
   application:
     name: ead-notification-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/ead-notification-v2
+    username: postgres
+    password: 12345
+  jpa:
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.PostgreSQLDialect
+      jdbc:
+        lob.non-conextual-creation: true
+    properties:
+      hibernate:
+        show_sql: true
